@@ -26,16 +26,6 @@
 #define DO_MIN 2
 #define DO_AVG 3
 
-static FILE	*open_proc_file(const char *filename)
-{
-	struct stat	s;
-
-	if (0 != stat(filename, &s))
-		return NULL;
-
-	return fopen(filename, "r");
-}
-
 static int	get_cmdline(FILE *f_cmd, char **line, size_t *line_offset)
 {
 	size_t	line_alloc = ZBX_KIBIBYTE, n;
@@ -265,12 +255,12 @@ int	PROC_MEM(AGENT_REQUEST *request, AGENT_RESULT *result)
 
 		zbx_snprintf(tmp, sizeof(tmp), "/proc/%s/cmdline", entries->d_name);
 
-		if (NULL == (f_cmd = open_proc_file(tmp)))
+		if (NULL == (f_cmd = fopen(tmp, "r")))
 			continue;
 
 		zbx_snprintf(tmp, sizeof(tmp), "/proc/%s/status", entries->d_name);
 
-		if (NULL == (f_stat = open_proc_file(tmp)))
+		if (NULL == (f_stat = fopen(tmp, "r")))
 			continue;
 
 		if (FAIL == check_procname(f_cmd, f_stat, procname))
@@ -391,12 +381,12 @@ int	PROC_NUM(AGENT_REQUEST *request, AGENT_RESULT *result)
 
 		zbx_snprintf(tmp, sizeof(tmp), "/proc/%s/cmdline", entries->d_name);
 
-		if (NULL == (f_cmd = open_proc_file(tmp)))
+		if (NULL == (f_cmd = fopen(tmp, "r")))
 			continue;
 
 		zbx_snprintf(tmp, sizeof(tmp), "/proc/%s/status", entries->d_name);
 
-		if (NULL == (f_stat = open_proc_file(tmp)))
+		if (NULL == (f_stat = fopen(tmp, "r")))
 			continue;
 
 		if (FAIL == check_procname(f_cmd, f_stat, procname))
